tests/ui/wf/wf-inherent-impl-method-where-clause.stderr
error[E0277]: the trait bound `U: Copy` is not satisfied
  --> $DIR/wf-inherent-impl-method-where-clause.rs:12:27
   |
LL |     fn foo(self) where T: ExtraCopy<U>
   |                           ^^^^^^^^^^^^ the trait `Copy` is not implemented for `U`
   |
note: required by a bound in `ExtraCopy`
  --> $DIR/wf-inherent-impl-method-where-clause.rs:7:19
   |
LL | trait ExtraCopy<T:Copy> { }
   |                   ^^^^ required by this bound in `ExtraCopy`
help: consider restricting type parameter `U` with trait `Copy`
   |
LL | impl<T,U: std::marker::Copy> Foo<T,U> {
   |         +++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
